<resources>
    <string name="app_name">Assignment1</string>
    <string name="keyword_text_input">Keyword</string>
    <string name="button_search">Search</string>
    <string name="button_back_text"><![CDATA[<]]></string>
    <string name="image_description_poster">Poster Image</string>
    <string name="title_text">Title</string>
    <string name="year_label">Year: </string>
    <string name="rating_label">Rating: </string>
    <string name="director_label">Director: </string>
    <string name="language_label">Language: </string>
    <string name="country_label">Country: </string>
    <string name='plot_label'>Description: </string>
</resources>