<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_16"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="@dimen/btn_back_width"
            android:layout_height="@dimen/btn_back_height"
            android:backgroundTint="@color/light_gray"
            android:text="@string/button_back_text" />

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="@dimen/details_poster_width"
            android:layout_height="@dimen/details_poster_height"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image_description_poster"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_16" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/title_text"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_8">

                <TextView
                    android:id="@+id/textViewYearLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year_label"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/textViewYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_marginEnd="@dimen/spacing_16" />

                <TextView
                    android:id="@+id/textViewRatingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_label"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_dark" />

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/holo_green_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_8">
                <TextView
                    android:id="@+id/textViewDirectorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director_label"
                    android:textStyle="italic"
                    android:textColor="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/textViewDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_8">
                <TextView
                    android:id="@+id/textViewLanguageLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/language_label" />
                <TextView
                    android:id="@+id/textViewLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_8">
                <TextView
                    android:id="@+id/textViewCountryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/country_label" />
                <TextView
                    android:id="@+id/textViewCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

                <TextView
                    android:id="@+id/textViewPlotLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/plot_label" />
                <TextView
                    android:id="@+id/textViewPlot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
